# Generated by Django 4.2.7 on 2025-10-29 14:45
# -*- coding: utf-8 -*-

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Finca',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('nombre', models.CharField(help_text='Nombre de la finca', max_length=200)),
                ('ubicacion', models.CharField(help_text='Dirección o ubicación de la finca', max_length=300)),
                ('municipio', models.CharField(help_text='Municipio donde se encuentra la finca', max_length=100)),
                ('departamento', models.CharField(help_text='Departamento donde se encuentra la finca', max_length=100)),
                ('hectareas', models.DecimalField(decimal_places=2, help_text='Área total de la finca en hectáreas', max_digits=10)),
                ('descripcion', models.TextField(blank=True, help_text='Descripción adicional de la finca', null=True)),
                ('coordenadas_lat', models.DecimalField(blank=True, decimal_places=7, help_text='Latitud GPS de la finca', max_digits=10, null=True)),
                ('coordenadas_lng', models.DecimalField(blank=True, decimal_places=7, help_text='Longitud GPS de la finca', max_digits=10, null=True)),
                ('fecha_registro', models.DateTimeField(auto_now_add=True, help_text='Fecha de registro de la finca')),
                ('activa', models.BooleanField(default=True, help_text='Indica si la finca está activa')),
                ('agricultor', models.ForeignKey(help_text='Agricultor propietario de la finca', on_delete=django.db.models.deletion.CASCADE, related_name='fincas_app_fincas', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'Finca',
                'verbose_name_plural': 'Fincas',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Lote',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('identificador', models.CharField(help_text='Identificador único del lote dentro de la finca', max_length=50)),
                ('variedad', models.CharField(help_text='Variedad de cacao del lote', max_length=100)),
                ('fecha_plantacion', models.DateField(help_text='Fecha de plantación del lote')),
                ('fecha_cosecha', models.DateField(blank=True, help_text='Fecha de cosecha del lote', null=True)),
                ('area_hectareas', models.DecimalField(decimal_places=2, help_text='Área del lote en hectáreas', max_digits=8)),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('inactivo', 'Inactivo'), ('cosechado', 'Cosechado'), ('renovado', 'Renovado')], default='activo', help_text='Estado actual del lote', max_length=20)),
                ('descripcion', models.TextField(blank=True, help_text='Descripción adicional del lote', null=True)),
                ('coordenadas_lat', models.DecimalField(blank=True, decimal_places=7, help_text='Latitud GPS del lote', max_digits=10, null=True)),
                ('coordenadas_lng', models.DecimalField(blank=True, decimal_places=7, help_text='Longitud GPS del lote', max_digits=10, null=True)),
                ('fecha_registro', models.DateTimeField(auto_now_add=True, help_text='Fecha de registro del lote')),
                ('activo', models.BooleanField(default=True, help_text='Indica si el lote está activo')),
                ('finca', models.ForeignKey(help_text='Finca a la que pertenece el lote', on_delete=django.db.models.deletion.CASCADE, related_name='fincas_app_lotes', to='fincas_app.finca')),
            ],
            options={
                'verbose_name': 'Lote',
                'verbose_name_plural': 'Lotes',
                'ordering': ['-created_at'],
                'indexes': [models.Index(fields=['finca', '-created_at'], name='fincas_app__finca_i_ed5362_idx'), models.Index(fields=['variedad'], name='fincas_app__varieda_b2a31e_idx'), models.Index(fields=['estado'], name='fincas_app__estado_769498_idx'), models.Index(fields=['activo'], name='fincas_app__activo_8dd844_idx')],
            },
        ),
        migrations.AddConstraint(
            model_name='lote',
            constraint=models.CheckConstraint(check=models.Q(('area_hectareas__gt', 0)), name='fincas_app_lote_area_positiva'),
        ),
        migrations.AddConstraint(
            model_name='lote',
            constraint=models.CheckConstraint(check=models.Q(('fecha_cosecha__isnull', True), ('fecha_cosecha__gte', models.F('fecha_plantacion')), _connector='OR'), name='fincas_app_lote_fecha_cosecha_valida'),
        ),
        migrations.AddConstraint(
            model_name='lote',
            constraint=models.UniqueConstraint(fields=('finca', 'identificador'), name='fincas_app_lote_identificador_unico_por_finca'),
        ),
        migrations.AddIndex(
            model_name='finca',
            index=models.Index(fields=['agricultor', '-created_at'], name='fincas_app__agricul_396b5b_idx'),
        ),
        migrations.AddIndex(
            model_name='finca',
            index=models.Index(fields=['agricultor_id'], name='fincas_app__agricul_ef7f1d_idx'),
        ),
        migrations.AddIndex(
            model_name='finca',
            index=models.Index(fields=['municipio', 'departamento'], name='fincas_app__municip_636180_idx'),
        ),
        migrations.AddIndex(
            model_name='finca',
            index=models.Index(fields=['activa'], name='fincas_app__activa_cf04c9_idx'),
        ),
        migrations.AddConstraint(
            model_name='finca',
            constraint=models.CheckConstraint(check=models.Q(('hectareas__gt', 0)), name='fincas_app_finca_hectareas_positivas'),
        ),
    ]


